src/site/scss/om14.scss
@import "normalize.scss";

$lightGreen: #9aceac; // background, logo background
$headerGreen: #2fac66;
$footerGreen: #2f9e54;
$headingGreen: #5bb278;
$claimGreen  : #0b8e36;
$bubbleGreen   : #48af70;
$bubbleTopGreen: #6bbf8d;
$bubbleBotGreen: $headingGreen;
$bubbleTxtGreen: #75bf90;
$orange: #f39200;
$white : #fff;
$textColor: #3d433f;

@font-face {
	font-family: 'DejaWeb';
	src: url('/fonts/dejaweb.eot');
	src: local('DejaWeb'), local('DejaWeb Regular'), local('DejaWeb-Regular'),
	     url('/fonts/dejaweb.eot') format('embedded-opentype'),
	     url('/fonts/dejaweb.woff') format('woff'),
	     url('/fonts/dejaweb.ttf') format('truetype'),
	     url('/fonts/dejaweb.svg#DejaWebRegular') format('svg');
	font-weight: normal;
	font-style: normal;
}
@font-face {
	font-family: 'DejaWeb';
	src: url('/fonts/dejaweb-italic.eot');
	src: local('DejaWeb Italic'), local('DejaWeb-Italic'),
	     url('/fonts/dejaweb-italic.eot') format('embedded-opentype'),
	     url('/fonts/dejaweb-italic.woff') format('woff'),
	     url('/fonts/dejaweb-italic.ttf') format('truetype'),
	     url('/fonts/dejaweb-italic.svg#DejaWebItalic') format('svg');
	font-weight: normal;
	font-style: italic;
}
@font-face {
	font-family: 'DejaWeb';
	src: url('/fonts/dejaweb-bold.eot');
	src: local('DejaWeb Bold'), local('DejaWeb-Bold'),
	     url('/fonts/dejaweb-bold.eot') format('embedded-opentype'),
	     url('/fonts/dejaweb-bold.woff') format('woff'),
	     url('/fonts/dejaweb-bold.ttf') format('truetype'),
	     url('/fonts/dejaweb-bold.svg#DejaWebBold') format('svg');
	font-weight: bold;
	font-style: normal;
}
@font-face {
	font-family: 'DejaWeb';
	src: url('/fonts/dejaweb-bolditalic.eot');
	src: local('DejaWeb Bold Italic'), local('DejaWeb-BoldItalic'),
	     url('/fonts/dejaweb-bolditalic.eot') format('embedded-opentype'),
	     url('/fonts/dejaweb-bolditalic.woff') format('woff'),
	     url('/fonts/dejaweb-bolditalic.ttf') format('truetype'),
	     url('/fonts/dejaweb-bolditalic.svg#DejaWebBoldItalic') format('svg');
	font-weight: bold;
	font-style: italic;
}
@font-face {
	font-family: 'Politics Head';
	src: url('/fonts/politicshead.eot');
	src: local('Politics Head'), local('Politics Head Bold'), local('PoliticsHead-Bold'), local('Politics Head Regular'), local('PoliticsHead-Regular'),
	     url('/fonts/politicshead.eot') format('embedded-opentype'),
	     url('/fonts/politicshead.woff') format('woff'),
	     url('/fonts/politicshead.ttf') format('truetype'),
	     url('/fonts/politicshead.svg#PoliticsHeadBold') format('svg');
	font-weight: bold;
	font-style: normal;
}

@mixin politics {
	font: {
		family: "Politics Head", "Verdana", "Vera Sans", sans-serif;
		weight: bold;
	}
	text-transform: uppercase;
}

@mixin dejaweb {
	font: {
		family: "DejaWeb", "Verdana", "Vera Sans", sans-serif;
	}
}

body {
	background: $lightGreen;
	font-family: sans-serif;
	padding: 0;
}

nav {
	@include politics;
	background: $headerGreen;
	font-size: 18px;
	line-height: 40px;

	a {
		color: $white;
		padding: 0 20px;
		&:hover {
			background-color: $orange;
		}
	}
}

#header {
	background: {
		color: #000;
		position: 50% 50%;
		repeat: no-repeat;
	}
	html.no-js &, html.no-canvas & {
		background: {
			image: url("/img/header-fallback.jpg");
			size: cover;
		}
	}
	canvas {
		image-rendering: optimizeSpeed;
		image-rendering: -moz-crisp-edges;
		image-rendering: -webkit-optimize-contrast;
		image-rendering: -o-crisp-edges;
		image-rendering: crisp-edges;
		-ms-interpolation-mode: nearest-neighbor;
	}
}

#logo {
	@include politics;
	text-align: center;
	width: 100%;
	padding: 32px 0;
}

#hashtag {
	color: $headingGreen;
	font-size: 80px;
}

#claim {
	color: $claimGreen;
	font-size: 25px;
}

#hashtag-and-claim {
	text-shadow: #000 0 0 2px;
}

body.not-home {
	#logo {
		* {
			// TODO: This is in preparation for having the logo on each page. Remove this block as soon as it’s finished.
			display: none;
		}
		height: 24px;
		padding-left: 24px;
		img {
			float: left;
			height: 24px;
			width: auto;
		}
	}

	#hashtag-and-claim {
		float: left;
		padding-left: 10px;
		margin-top: -4px;
	}

	#hashtag {
		font-size: 20px;
	}

	#claim {
		font-size: 6.25px;
	}
}

#content {
	@include dejaweb;
	max-width: 940px;
	margin: 0 auto;
	padding: 0 20px;
	color: $textColor;
}

h1 {
	@include politics;
	text-align: center;
	margin: 50px 0 40px 0;

	span.wrapper {
		display: inline-block;
		max-width: 50%;
		padding: 14px 25px;
		background: $orange;
		color: $white;
	}
}

h2 {
	@include politics;
	color: #000;
}

a {
	color: #086c29;
	text-decoration: underline;
}

ul.inline {
	margin: 0;
	padding: 0;
	text-align: center;

	li {
		// TODO: There is a space between the <li>s. Get rid of that.
		display: inline;

		a {
			display: inline-block;
			text-decoration: none;
			white-space: nowrap;
		}
	}
}

#buttons {
	margin: 80px 0;
}

.btn-twitter, .btn-fb, .btn-gplus, .btn-yt {
	background: url(/img/buttons.png) no-repeat;
	text-indent: 100%;
	white-space: nowrap;
	overflow: hidden;
	margin: 0 20px;
}

.btn-twitter {
	background-position: 0 0;
	width: 76px;
	height: 76px;
}

.btn-fb {
	background-position: -76px 0;
	width: 76px;
	height: 76px;
}

.btn-gplus {
	background-position: -152px 0;
	width: 76px;
	height: 76px;
}

.btn-yt {
	background-position: -228px 0;
	width: 76px;
	height: 76px;
}

